--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
+  charts_flutter: ^0.12.0
+  fl_chart: ^0.70.2
+  flutter_ai_toolkit: ^0.6.8
+  google_generative_ai: ^0.4.6
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
