--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
 
   flame: ^1.26.0
   three_dart: ^0.0.16
+  flutter_cube: ^0.1.1
+  flutter_3d_controller: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +66,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - lib/images/icon.png
+     - lib/models/building.obj
+     - lib/models/uploads_files_843029_Block_5_Office.mtl
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
