--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,9 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - lib/images/icon.png
-     - lib/models/building.obj
-     - lib/models/uploads_files_843029_Block_5_Office.mtl
+     - lib/images/
+     - lib/models/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
