--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ flutter:
   assets:
      - lib/images/
      - lib/models/
+     - lib/constants/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
