--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   three_dart: ^0.0.16
   flutter_cube: ^0.1.1
   flutter_3d_controller: ^1.3.1
+  model_viewer_plus: ^1.7.0
 
 dev_dependencies:
   flutter_test:
