--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_cube: ^0.1.1
   flutter_3d_controller: ^1.3.1
   model_viewer_plus: ^1.7.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +71,8 @@ flutter:
   assets:
      - lib/images/
      - lib/models/
-     - lib/constants/
+     - lib/data/
+     - assets/data/tools.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
